--- a/Pumpkin/pumpkin.html
+++ b/Pumpkin/pumpkin.html
@@ -33,7 +33,19 @@
 </div>
 <!--Follow tutorial for pumpkin and add code below this line -->
 
+<div id="container">
+  <div id="pumkin">
+    <div class="texture"></div>
+    <div class="root"></div>
+    <div class="eye left"></div>
+    <div class="eye right"></div>
+    <div id="mouth left"></div>
+    <div id="mouth right"></div>
+    <div id="teeth"></div>
+  </div>
 
+  <div id="shadow"></div>
+</div>
 
 
 
