--- a/spider.html
+++ b/spider.html
@@ -22,13 +22,13 @@
 <p> Spider</p>
 <div class="choose">
  <button>
-        <a href=".Spider/spider.html">Spider</a>
+        <a href="spider.html">Spider</a>
     </button>
       <button>
-        <a href="/Pumpkin/pumpkin.html">Pumpkin</a>
+        <a href="pumpkin.html">Pumpkin</a>
     </button>
       <button>
-        <a href="/Ghost/ghost.html">Ghost</a>
+        <a href="ghost.html">Ghost</a>
     </button>
     </div>
 
