--- a/ghost.html
+++ b/ghost.html
@@ -25,10 +25,10 @@
         <a href="/Spider/spider.html">Spider</a>
     </button>
       <button>
-        <a href="/Pumpkin/pumpkin.html">Pumpkin</a>
+        <a href="pumpkin.html">Pumpkin</a>
     </button>
       <button>
-        <a href="/Ghost/ghost.html">Ghost</a>
+        <a href="ghost.html">Ghost</a>
     </button>
 </div>
 
